# tree-sitter-actions

./: .gitignore  .nvim.lua  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPLETE_GENERATION_PLAN.md  Cargo.toml  DOCUMENTATION_INDEX.md  Makefile  ONTOLOGY_DRIVEN.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROGRESS.md  Package.swift  README.md  README_SYNTAX_MAPPING.md  ROADMAP.md  SYNTAX_MAPPING_SUMMARY.md  generate_trees.sh  go.mod  grammar-generated.js  grammar.js  log.html  next.actions  package-lock.json  package.json  parser-ontology.ttl  parser-shapes.ttl  parser.js  patterns.js  pyproject.toml  schema.json  syntax_mapping.json  syntax_mapping.yaml  test_syntax_mapping.js  tree-sitter.json
.clearhead/: next.actions  next.completed.actions  next.open.ttl
.topiary/: languages.ncl
.vectorcode/: vectorcode.include
docs/: Action - Schema.org Type.html  README.md  SYNTAX_MAPPING.md  action_specification.md  actions-examples.md  actions-fileformat-spec.md  actions-implementation-guide.md  actions-ontology-test.ttl  actions-ontology-v2-clean.ttl  actions-ontology-v2.ttl  actions-vocabulary.ttl  contributing.md  json_schema_specification.md  ontology.turtle  sql_schema_specification.md  usage.md
examples/: calendar_export_example.actions  conformance_test.actions  deployment_workflow.actions  formatting  laundry_workflow.actions  linting_e003.actions  minimal.actions  minimal_test.actions  multiple_dependencies.actions  recurring_log_example.actions  recurring_templates.actions  sample.json  test_description_predecessor.actions  test_predecessor.actions  test_predecessor_only.actions  with_alias.actions  with_alias_backup.actions  with_children.actions  with_children_and_second_root.actions  with_completed_date.actions  with_context.actions  with_description.actions  with_do_date.actions  with_everything.actions  with_everything_spec.actions  with_id_no_dash.actions  with_id_with_dash.actions  with_links.actions  with_new_features.actions  with_priority.actions  with_recurring_daily_do_date.actions  with_recurring_weekly_do_date.actions  with_sequential.actions  with_short_uuid.actions  with_story.actions  with_story_path.actions
ftdetect/: actions.lua
queries/: actions.scm
schema/: actions.schema.json  actions.sql
scripts/: generate-schema.js  generate-syntax-mapping-regex.js.bak  generate-syntax-mapping.js  generate_tests.js  generate_trees.js  regenerate_all.js  test_formatting.js
src/: grammar.json  grammar_generator.js  json_to_actions_converter.js  node-types.json  parser.c  syntax_mapping.js  syntax_mapping_utils.js
test/: highlights_query_test.js  (+4 more)
(+109 files in other folders)
