[package]
name = "tree-sitter-actions"
description = "parser for the actions file as defined by the specification therein"
version = "0.2.0"
authors = ["Darrion Burgess <darrionburgess@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "actions"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/clearheadtodo-devs/tree-sitter-actions"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
